# Wolf3D

./: .gitignore  CMakeLists.txt  README.md  Wolf3D.sln
Debug/: Wolf3D.ilk
Wolf3D/: .gitignore  Wolf3D.1.trace  Wolf3D.2.trace  Wolf3D.trace  Wolf3D.vcxproj  Wolf3D.vcxproj.filters  game.cpp  game.hpp  graphics.cpp  graphics.hpp  input.cpp  input.hpp  main.cpp  resources.cpp  resources.hpp  types.hpp  utils.hpp
Wolf3D/Debug/: vc140.idb
Wolf3D/Debug/Wolf3D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Wolf3D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Wolf3D/levels/: test.map  test.tile  test2.map  test2.tile
Wolf3D/models/: door.blend  door.blend1
Wolf3D/shaders/: basic.vert  sprite.frag
Wolf3D/tools/: convert_map.py  extract_sprites.py  level_editor.py
assets/: CMakeLists.txt
assets/levels/: test.tile
assets/models/: painting.blend
assets/shaders/: shape.frag  shape.vert  sprite.vert  text.frag  text.vert
common/: CMakeLists.txt
common/include/: context.hpp  draw.hpp  graphics.hpp  input.hpp  resources.hpp  utils.hpp
common/src/: context.cpp  draw.cpp  gl3w.c  graphics.cpp  resources.cpp
editor/: CMakeLists.txt
editor/include/: editor.hpp
editor/src/: editor.cpp  main.cpp
game/: CMakeLists.txt
game/include/: game.hpp
game/src/: game.cpp  main.cpp
scripts/: level_editor.py
